; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_scif_sas_controller.c_scif_controller_set_mode.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_scif_sas_controller.c_scif_controller_set_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, i8*, %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i64 }

@SCI_SUCCESS = common dso_local global i64 0, align 8
@SCI_BASE_CONTROLLER_STATE_INITIALIZING = common dso_local global i64 0, align 8
@SCI_BASE_CONTROLLER_STATE_INITIALIZED = common dso_local global i64 0, align 8
@SCIF_SAS_MAX_INTERNAL_REQUEST_COUNT = common dso_local global i32 0, align 4
@SCIF_SAS_MIN_INTERNAL_REQUEST_COUNT = common dso_local global i32 0, align 4
@SCI_FAILURE_INVALID_PARAMETER_VALUE = common dso_local global i64 0, align 8
@SCI_FAILURE_INVALID_STATE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @scif_controller_set_mode(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_7__*, align 8
  %7 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i64, i64* %4, align 8
  %9 = inttoptr i64 %8 to %struct.TYPE_7__*
  store %struct.TYPE_7__* %9, %struct.TYPE_7__** %6, align 8
  %10 = load i64, i64* @SCI_SUCCESS, align 8
  store i64 %10, i64* %7, align 8
  %11 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %12 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %11, i32 0, i32 2
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @SCI_BASE_CONTROLLER_STATE_INITIALIZING, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %26, label %18

18:                                               ; preds = %2
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %20 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %19, i32 0, i32 2
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load i64, i64* @SCI_BASE_CONTROLLER_STATE_INITIALIZED, align 8
  %25 = icmp eq i64 %23, %24
  br i1 %25, label %26, label %51

26:                                               ; preds = %18, %2
  %27 = load i32, i32* %5, align 4
  switch i32 %27, label %48 [
    i32 128, label %28
    i32 129, label %38
  ]

28:                                               ; preds = %26
  %29 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %30 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %29, i32 0, i32 1
  %31 = load i8*, i8** %30, align 8
  %32 = load i32, i32* @SCIF_SAS_MAX_INTERNAL_REQUEST_COUNT, align 4
  %33 = call i8* @MIN(i8* %31, i32 %32)
  %34 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %35 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %34, i32 0, i32 1
  store i8* %33, i8** %35, align 8
  %36 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %37 = call i32 @scif_sas_controller_build_mdl(%struct.TYPE_7__* %36)
  br label %50

38:                                               ; preds = %26
  %39 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %40 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %39, i32 0, i32 1
  %41 = load i8*, i8** %40, align 8
  %42 = load i32, i32* @SCIF_SAS_MIN_INTERNAL_REQUEST_COUNT, align 4
  %43 = call i8* @MIN(i8* %41, i32 %42)
  %44 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %45 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %44, i32 0, i32 1
  store i8* %43, i8** %45, align 8
  %46 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %47 = call i32 @scif_sas_controller_build_mdl(%struct.TYPE_7__* %46)
  br label %50

48:                                               ; preds = %26
  %49 = load i64, i64* @SCI_FAILURE_INVALID_PARAMETER_VALUE, align 8
  store i64 %49, i64* %7, align 8
  br label %50

50:                                               ; preds = %48, %38, %28
  br label %53

51:                                               ; preds = %18
  %52 = load i64, i64* @SCI_FAILURE_INVALID_STATE, align 8
  store i64 %52, i64* %7, align 8
  br label %53

53:                                               ; preds = %51, %50
  %54 = load i64, i64* %7, align 8
  %55 = load i64, i64* @SCI_SUCCESS, align 8
  %56 = icmp ne i64 %54, %55
  br i1 %56, label %57, label %59

57:                                               ; preds = %53
  %58 = load i64, i64* %7, align 8
  store i64 %58, i64* %3, align 8
  br label %65

59:                                               ; preds = %53
  %60 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %61 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %60, i32 0, i32 0
  %62 = load i32, i32* %61, align 8
  %63 = load i32, i32* %5, align 4
  %64 = call i64 @scic_controller_set_mode(i32 %62, i32 %63)
  store i64 %64, i64* %3, align 8
  br label %65

65:                                               ; preds = %59, %57
  %66 = load i64, i64* %3, align 8
  ret i64 %66
}

declare dso_local i8* @MIN(i8*, i32) #1

declare dso_local i32 @scif_sas_controller_build_mdl(%struct.TYPE_7__*) #1

declare dso_local i64 @scic_controller_set_mode(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
